# polybar-now-playing-script

./: Cargo.toml  README.md
src/: main.rs  print_players.rs  print_text.rs  update_message.rs  update_players.rs
src/structs/: cli.rs  config.rs  data.rs  mod.rs
