[package]
name = "polybar-now-playing-rust"
version = "0.9.0"
edition = "2021"
authors = ["DjairoH <djairoh@mykolab.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "2.0.*"
confy = "0.5.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
string-builder = "0.2.*"
env_logger = "0.4.*"
dotenvy = "0.15.7"
log = "0.4"
signal-hook = "0.3.*"
toml = "0.5.*"
clap = { version = "4.2.*", features = ["derive"] }
dyn-fmt = "0.4.0"
